--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -28,7 +28,13 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
-              uses: actions/checkout@v4
+              uses: actions/checkout@v4.1.7
+            # artifact ?
+            - name: Upload GitHub Pages artifact
+              uses: actions/upload-pages-artifact@v3.0.1
+            - name: Deploy GitHub Pages site
+              uses: actions/deploy-pages@v4.0.5
+
             - name: Detect package manager
               id: detect-package-manager
               run: |
